--- a/cursus/1/printf/Makefile
+++ b/cursus/1/printf/Makefile
@@ -6,7 +6,7 @@
 #    By: ymanchon <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/05/13 16:21:19 by ymanchon          #+#    #+#              #
-#    Updated: 2024/05/13 17:37:11 by ymanchon         ###   ########.fr        #
+#    Updated: 2024/05/16 16:00:28 by ymanchon         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,13 +20,13 @@ SRCS =	./srcs/ft_utils.c \
 		./srcs/ft_utils2.c \
 		./srcs/ft_hexa.c \
 		./srcs/ft_showptr.c \
-		./srcs/ft_printf.c
+		./srcs/ft_printf.c \
 
 OBJS_DIR =	objs
 
 OBJS =	$(SRCS:%.c=$(OBJS_DIR)/%.o)
 
-INCLUDES = ./includes/
+INCLUDES = -I .
 
 CFLAGS =	-Wall -Wextra -Werror
 
@@ -37,7 +37,7 @@ $(NAME): $(OBJS)
 
 $(OBJS_DIR)/%.o: %.c
 	@mkdir -p $(@D)
-	$(CC) -I $(INCLUDES) $(CFLAGS) -c $< -o $@
+	$(CC) $(INCLUDES) $(CFLAGS) -c $< -o $@
 
 clean:
 	rm $(OBJS_DIR) -rf
