--- a/cursus/0/libft/Makefile
+++ b/cursus/0/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: ymanchon <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/05/13 16:21:19 by ymanchon          #+#    #+#              #
-#    Updated: 2024/05/13 17:37:11 by ymanchon         ###   ########.fr        #
+#    Updated: 2024/05/16 16:48:04 by ymanchon         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -29,6 +29,7 @@ SRCS =  ./srcs/ft_atoi.c \
 		./srcs/ft_memcmp.c \
 		./srcs/ft_memcpy.c \
 		./srcs/ft_memmove.c \
+		./srcs/ft_memset.c \
 		./srcs/ft_putchar_fd.c \
 		./srcs/ft_putendl_fd.c \
 		./srcs/ft_putnbr_fd.c \
@@ -43,19 +44,22 @@ SRCS =  ./srcs/ft_atoi.c \
 		./srcs/ft_strncmp.c \
 		./srcs/ft_strrchr.c \
 		./srcs/ft_strtrim.c \
+		./srcs/ft_strlcpy.c \
+		./srcs/ft_strlcat.c \
 		./srcs/ft_substr.c \
 		./srcs/ft_tolower.c \
 		./srcs/ft_toupper.c \
+		./srcs/ft_strnstr.c \
 
-SRCS_BONUS =	./srcs/ft_lstadd_back.c \
-				./srcs/ft_lstadd_front.c \
-				./srcs/ft_lstclear.c \
-				./srcs/ft_lstdelone.c \
-				./srcs/ft_lstiter.c \
-				./srcs/ft_lstlast.c \
-				./srcs/ft_lstmap.c \
-				./srcs/ft_lstnew.c \
-				./srcs/ft_lstsize.c \
+SRCS_BONUS =	./srcs/ft_lstadd_back_bonus.c \
+				./srcs/ft_lstadd_front_bonus.c \
+				./srcs/ft_lstclear_bonus.c \
+				./srcs/ft_lstdelone_bonus.c \
+				./srcs/ft_lstiter_bonus.c \
+				./srcs/ft_lstlast_bonus.c \
+				./srcs/ft_lstmap_bonus.c \
+				./srcs/ft_lstnew_bonus.c \
+				./srcs/ft_lstsize_bonus.c \
 
 OBJS_DIR =	objs
 
