--- a/cursus/1/ft_printf/Makefile
+++ b/cursus/1/ft_printf/Makefile
@@ -3,32 +3,40 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: ymanchon <marvin@42.fr>                    +#+  +:+       +#+         #
+#    By: ymanchon <ymanchon@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/05/13 16:21:19 by ymanchon          #+#    #+#              #
-#    Updated: 2024/05/16 16:00:28 by ymanchon         ###   ########.fr        #
+#    Updated: 2024/05/28 13:23:51 by ymanchon         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = libft_printf.a
+NAME = libftprintf.a
 
 CC =	cc
 
 AR =  ar -rcs
 
-SRCS =	./srcs/ft_utils.c \
-		./srcs/ft_utils2.c \
+SRCS =	./srcs/ft_printf_utils.c \
+		./srcs/ft_printf_utils2.c \
 		./srcs/ft_hexa.c \
 		./srcs/ft_showptr.c \
 		./srcs/ft_printf.c \
 
-OBJS_DIR =	objs
+SRCS_BONUS =	./bonus/ft_printf_utils_bonus.c \
+				./bonus/ft_printf_utils2_bonus.c \
+				./bonus/ft_printf_handle_bonus.c \
+
+OBJS_DIR =		objs
 
 OBJS =	$(SRCS:%.c=$(OBJS_DIR)/%.o)
+
+OBJS_BONUS =	$(SRCS_BONUS:%.c=$(OBJS_DIR)/%.o)
 
 INCLUDES = -I .
 
 CFLAGS =	-Wall -Wextra -Werror
+
+BONUS_FLAGS =	-D BONUS_PART=1
 
 all: $(NAME)
 
@@ -39,6 +47,10 @@ $(OBJS_DIR)/%.o: %.c
 	@mkdir -p $(@D)
 	$(CC) $(INCLUDES) $(CFLAGS) -c $< -o $@
 
+$(OBJS_DIR_B)/%.o: %.c
+	@mkdir -p $(@D)
+	$(CC) $(INCLUDES)$(CFLAGS) $(BONUS_FLAG) -c $< -o $@
+
 clean:
 	rm $(OBJS_DIR) -rf
 
@@ -47,4 +59,8 @@ fclean: clean
 
 re: fclean all
 
-.PHONY: all clean fclean re
+bonus: CFLAGS += $(BONUS_FLAGS)
+bonus: fclean all $(OBJS_BONUS)
+	$(AR) -o $(NAME) $(OBJS_BONUS)
+
+.PHONY: all clean fclean re bonus
