--- a/cursus/1/ft_printf/Makefile
+++ b/cursus/1/ft_printf/Makefile
@@ -6,7 +6,7 @@
 #    By: ymanchon <ymanchon@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/05/13 16:21:19 by ymanchon          #+#    #+#              #
-#    Updated: 2024/05/28 13:23:51 by ymanchon         ###   ########.fr        #
+#    Updated: 2024/05/28 16:37:17 by ymanchon         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,10 +21,9 @@ SRCS =	./srcs/ft_printf_utils.c \
 		./srcs/ft_hexa.c \
 		./srcs/ft_showptr.c \
 		./srcs/ft_printf.c \
-
-SRCS_BONUS =	./bonus/ft_printf_utils_bonus.c \
-				./bonus/ft_printf_utils2_bonus.c \
-				./bonus/ft_printf_handle_bonus.c \
+		./bonus/ft_printf_utils_bonus.c \
+		./bonus/ft_printf_utils2_bonus.c \
+		./bonus/ft_printf_handle_bonus.c \
 
 OBJS_DIR =		objs
 
@@ -32,11 +31,9 @@ OBJS =	$(SRCS:%.c=$(OBJS_DIR)/%.o)
 
 OBJS_BONUS =	$(SRCS_BONUS:%.c=$(OBJS_DIR)/%.o)
 
-INCLUDES = -I .
+INCLUDES = -I . -I ./includes/
 
-CFLAGS =	-Wall -Wextra -Werror
-
-BONUS_FLAGS =	-D BONUS_PART=1
+CFLAGS =	-MMD -Wall -Wextra #-Werror
 
 all: $(NAME)
 
@@ -47,10 +44,6 @@ $(OBJS_DIR)/%.o: %.c
 	@mkdir -p $(@D)
 	$(CC) $(INCLUDES) $(CFLAGS) -c $< -o $@
 
-$(OBJS_DIR_B)/%.o: %.c
-	@mkdir -p $(@D)
-	$(CC) $(INCLUDES)$(CFLAGS) $(BONUS_FLAG) -c $< -o $@
-
 clean:
 	rm $(OBJS_DIR) -rf
 
@@ -59,8 +52,6 @@ fclean: clean
 
 re: fclean all
 
-bonus: CFLAGS += $(BONUS_FLAGS)
-bonus: fclean all $(OBJS_BONUS)
-	$(AR) -o $(NAME) $(OBJS_BONUS)
+bonus: all
 
 .PHONY: all clean fclean re bonus
